# studio-captioner-ai

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml  run.py  studio_captioner.db  test_results.txt
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: auth.py  preview.py  settings.py  subtitles.py  tasks.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/schemas/: settings.py  task.py  user.py
backend/app/services/: auth.py  path_resolver.py  pipeline.py  task_queue.py
backend/app/ws/: handlers.py
backend/core/: __init__.py  config.py  entities.py
backend/core/asr/: __init__.py  base.py  chunked_asr.py  transcribe.py  whisper_cpp.py
backend/core/llm/: check_llm.py  check_whisper.py  client.py  request_logger.py
backend/core/prompts/: __init__.py
backend/core/split/: split.py
backend/core/subtitle/: ass_renderer.py  font_utils.py  rounded_renderer.py  style_manager.py  styles.py
backend/core/translate/: __init__.py  base.py  factory.py  llm_translator.py  types.py
backend/core/utils/: cache.py  logger.py  platform_utils.py  video_utils.py
backend/features/back_translation/: confidence.py  verifier.py
backend/features/glossary/: api.py  corrector.py  importer.py  injector.py  manager.py  models.py  schemas.py
backend/features/translation_memory/: matcher.py  models.py  store.py
backend/tests/test_api/: test_auth.py  test_database.py  test_health.py  test_path_resolver.py  test_preview.py  test_queue.py  test_settings.py  test_subtitles.py  test_tasks.py  test_websocket.py
(+49 files in other folders)
